# ros_misc

./: README.md
bag_tools/: CMakeLists.txt  package.xml
bag_tools/launch/: export_images.launch  laser2pc.launch
bag_tools/scripts/: change_camera_info.py
bag_tools/src/: laser2pc.cpp
gps_modular/scripts/: abs_gps_transform.py  gps_transform.py
image_detection/: README.md  obs.yaml  test.py  train.py
